Kubekitchen-infra/k8s/10-gateway/gateway-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubekitchen-gateway
  labels:
    project: kubekitchen
    component: gateway
    kubernetes.io/metadata.name: kubekitchen-gateway
