Kubekitchen-infra/k8s/10-gateway/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kgateway-nodeport
  namespace: kubekitchen-dev
spec:
  type: NodePort
  selector:
    kgateway: kube-gateway   # Confirmed label on kubekitchen-gateway-* pod
  ports:
  - port: 80
    targetPort: 8080         # kgateway proxy listens on 8080/TCP (confirmed)
    nodePort: 30080          # HAProxy forwards to this port on worker nodes
    protocol: TCP
