Kubekitchen-infra/k8s/10-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kubekitchen-gateway
  namespace: kubekitchen-gateway
spec:
  gatewayClassName: kgateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
